@@ -26,7 +26,7 @@ public:
 
     // see the explanation of the following WXOnXXX() methods in wx/generic/dvrenderer.h
 
-    virtual bool WXOnActivate(wxRect cell,
+    virtual bool WXOnActivate(const wxRect& cell,
                               wxDataViewModel *model,
                               const wxDataViewItem& item,
                               unsigned int col)
@@ -34,8 +34,8 @@ public:
         return Activate(cell, model, item, col);
     }
 
-    virtual bool WXOnLeftClick(wxPoint cursor,
-                               wxRect cell,
+    virtual bool WXOnLeftClick(const wxPoint& cursor,
+                               const wxRect& cell,
                                wxDataViewModel *model,
                                const wxDataViewItem &item,
                                unsigned int col)
@@ -121,8 +121,8 @@ public:
     wxSize GetSize() const;
 
     // Implementation only, don't use nor override
-    virtual bool WXOnLeftClick(wxPoint cursor,
-                               wxRect cell,
+    virtual bool WXOnLeftClick(const wxPoint& cursor,
+                               const wxRect& cell,
                                wxDataViewModel *model,
                                const wxDataViewItem& item,
                                unsigned int col);
@@ -206,7 +206,7 @@ public:
     virtual wxSize GetSize() const;
 
     // Implementation only, don't use nor override
-    virtual bool WXOnActivate(wxRect cell,
+    virtual bool WXOnActivate(const wxRect& cell,
                               wxDataViewModel *model,
                               const wxDataViewItem& item,
                               unsigned int col);
